tests/c_emit/bad/extern_optional_by_value.mc
// EXPECT: E_EXTERN_STRUCT_BY_VALUE
extern "C" fn consume_optional(value: ?u32) -> void;

fn main() -> void {
    return;
}
